<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">project2</string>
	<string name="project_title">Score Keeper (FootBall)</string>
	<string name="goal_button">+1 Goal</string>
	<string name="foul_button">+1 Foul</string>
	<string name="reset_button">Reset</string>
	<string name="team_a">Team A</string>
	<string name="team_b">Team B</string>
	<string name="zero">0</string>
	<string name="foul_title">FOUL</string>
</resources>
