<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@color/dark_gray">
	<RelativeLayout
 	    android:layout_width="match_parent"
   	    android:layout_height="match_parent"
		android:background="@color/dark_gray">
		<ImageView
			android:id="@+id/line"
			android:src="@drawable/line"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:scaleType="center"
			android:paddingBottom="10dp"
			android:paddingRight="-24dp"
			android:paddingLeft="-20dp"/>
		<Button
			android:id="@+id/reset"
			android:text="@string/reset_button"
			style="@style/CustomButton"
			android:layout_below="@+id/line"
			android:onClick="reset"
			android:layout_centerHorizontal="true"/>
		<LinearLayout
			android:id="@+id/left_side"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_toLeftOf="@+id/line"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="16dp"
			android:orientation="vertical"
			android:gravity="center_horizontal">
			<TextView
				android:id="@+id/teamA"
				style="@style/NormalText"
				android:text="@string/team_a"
				android:textSize="20sp"
				android:textStyle="bold"
				android:paddingBottom="0dp"/>
			<TextView
				android:id="@+id/team_a_points"
				android:text="@string/zero"
				style="@style/NormalText"
				android:textSize="70sp"
				android:paddingBottom="16dp"/>
			<Button
				android:text="@string/goal_button"
				style="@style/CustomButton"
				android:onClick="adda"/>
			<TextView
				style="@style/NormalText"
				android:text="@string/foul_title"
				android:textSize="18sp"
				android:paddingTop="16dp"/>
			<TextView
				android:id="@+id/team_a_foul"
				android:text="@string/zero"
				android:textSize="50sp"
				style="@style/NormalText"
				android:paddingBottom="16dp"/>
			<Button
				android:text="@string/foul_button"
				style="@style/CustomButton"
				android:onClick="addfoula"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/right_side"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_toRightOf="@+id/line"
			android:layout_marginRight="16dp"
			android:layout_marginTop="16dp"
			android:orientation="vertical"
			android:gravity="center_horizontal">
			<TextView
				style="@style/NormalText"
				android:text="@string/team_b"
				android:textSize="20sp"
				android:textStyle="bold"
				android:paddingBottom="0dp"/>
			<TextView
				android:id="@+id/team_b_points"
				android:text="@string/zero"
				style="@style/NormalText"
				android:textSize="70sp"
				android:paddingBottom="16dp"/>
			<Button
				android:text="@string/goal_button"
				style="@style/CustomButton"
				android:onClick="addb"/>
			<TextView
				style="@style/NormalText"
				android:text="@string/foul_title"
				android:textSize="18sp"
				android:paddingTop="16dp"/>
			<TextView
				android:id="@+id/team_b_foul"
				android:text="@string/zero"
				style="@style/NormalText"
				android:textSize="50sp"
				android:paddingBottom="16dp"/>
			<Button
				android:text="@string/foul_button"
				style="@style/CustomButton"
				android:onClick="addfoulb"/>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>
